--- a/scss/_utilidades/_mixin.scss
+++ b/scss/_utilidades/_mixin.scss
@@ -2,7 +2,7 @@
     border-radius: $radius;
   }
   
-  .boton {
+  .Boton {
     background-color: $color-botones;
     color: $color-principal;
     padding: 10px 20px;
@@ -10,11 +10,4 @@
     width: 23%;
     text-align: center;
 }
-@mixin footer-estilo {
-    background-color: $color-principal;
-    font-size: 1em;
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    text-align: center;
-  }
+
