--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,35 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Nunito Sans', sans-serif; }
+  font-family: 'Rubik', sans-serif;
+  text-align: center; }
 
-.boton {
+.main {
+  margin-bottom: 1em; }
+
+.LogoGlaciar img {
+  width: 100px;
+  height: auto; }
+
+h1, h2, h3 {
+  color: #1dadbf; }
+
+.FooterContainer {
+  background-color: #ccc;
+  background-color: #1dadbf;
+  bottom: 0;
+  position: sticky;
+  padding: 10px;
+  width: 100%;
+  text-align: center; }
+  .FooterContainer h4 {
+    font-size: 1em; }
+  .FooterContainer p {
+    margin: 0; }
+  .FooterContainer a {
+    color: #FFFFFF; }
+
+.Boton {
   background-color: #095959;
   color: #1dadbf;
   padding: 10px 20px;
@@ -11,41 +37,68 @@
   width: 23%;
   text-align: center; }
 
+h1 {
+  color: #ff0000; }
+
+.Copete {
+  text-align: center; }
+
+.MiCarru {
+  display: flex;
+  margin: 0 auto;
+  width: 80%;
+  justify-content: center;
+  border: 1px black; }
+
 .navbar-nav li a {
   font-size: 1.5em; }
 
-.logo-glaciar img {
-  width: 100px;
-  height: auto; }
+.TarjetasGuias {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: 30px; }
 
-.copete {
-  text-align: center; }
+.Container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; }
+  .Container .Columna1 {
+    width: 100%;
+    margin: 10px; }
+  .Container .Columnas {
+    width: 40%;
+    margin: 10px; }
+  .Container img {
+    width: 100%;
+    height: auto; }
 
-.tarj-container {
+.TarjetasContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.5em;
   background-color: #095959;
   padding: 1.5em; }
 
-.tarjetas {
+.Tarjetas {
   background-color: #095959;
   border-radius: 5px; }
-  .tarjetas img {
+  .Tarjetas img {
     max-width: 100%;
     height: 320px; }
-  .tarjetas h3 {
+  .Tarjetas h3 {
     font-size: 1.5rem;
     margin-top: 1rem; }
-  .tarjetas p {
+  .Tarjetas p {
     font-size: 1.2rem;
     margin-top: 1rem; }
 
-.t-imagen {
+.TarjetasImagen {
   position: relative;
   display: inline-block; }
 
-.texto-encima {
+.TextoEncima {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -59,30 +112,20 @@
   justify-content: center;
   align-items: center;
   background-color: #20bfbe; }
-  .texto-encima h2 {
+  .TextoEncima h2 {
     display: block;
     color: #095959;
     font-size: 1.5em; }
-  .texto-encima p {
+  .TextoEncima p {
     display: block;
     color: white;
     background-color: #095959;
     font-size: 2em; }
 
-.t-imagen:hover .texto-encima {
+.TarjetasImagen:hover .TextoEncima {
   opacity: 1; }
 
-@media only screen and (max-width: 767px) {
-  .tarjetas img {
-    max-width: 100%;
-    height: 100px; } }
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .tarjetas img {
-    max-width: 100%;
-    height: 200px; } }
-
-.contacto {
+.Contacto {
   display: flex;
   flex-wrap: wrap; }
 
@@ -112,38 +155,39 @@ select {
   border-radius: 5px;
   border: 1px solid #ccc; }
 
-.footer-container {
-  background-color: #1dadbf;
-  font-size: 1em;
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-  text-align: center; }
-
-.micarru {
-  display: flex;
-  margin: 0 auto;
-  width: 80%;
-  justify-content: center;
-  border: 1px black; }
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap; }
-  .container .columna1 {
-    width: 100%;
-    margin: 10px; }
-  .container .columnas {
-    width: 40%;
-    margin: 10px; }
-  .container img {
-    width: 100%;
+@media only screen and (max-width: 767px) {
+  .TarjetasContainer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat 4 1fr;
+    justify-items: center; }
+  .Tarjetas img {
+    max-width: 100%;
     height: auto; }
-
-.tarj-guias {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  gap: 20px; }
+  .TarjetasGuias {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    gap: 30px; }
+  form {
+    max-width: 90%;
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 5px; }
+  .Contacto {
+    display: flex;
+    justify-content: center;
+    gap: 10px; }
+    .Contacto .Boton {
+      background-color: #095959;
+      color: #1dadbf;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-align: center;
+      width: auto;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin: auto 0; } }
